# cflow-platform

./: .cursorrules  .gitignore  AGENTS.md  CHANGELOG.md  NOTICE  README.md  pyproject.toml  supabase_connect.sh
.bmad-core/: core-config.yaml
.cerebraflow/: .env.example  edits.json  sync-status.json  webmcp_config.backup.20250921_181750
.cflow/: tasks.db
.cflow_backups/: mod.py.bak
.cursor/: mcp.json
.husky/: pre-commit
.vendor-overrides/: manifest.yaml
bmad_api_service/: __init__.py  analytics_engine.py  auth_service.py  error_handler.py  main.py  performance_monitor.py  performance_optimizer.py  persona_endpoints.py  production_config.py  provider_router.py  simple_main.py  supabase_task_integration.py  testing_validation_engine.py  trigger.txt  vendor_bmad_integration.py  web_interface.py  yaml_task_templates.py
cflow_platform/: __init__.py  install_hooks.py  verify_env.py
commands/: cflow-chroma-reset.md  cflow-codegen.md  cflow-desktop-notify.md  cflow-docs-backfill.md  cflow-fix-tests.md  cflow-migrate-supabase.md  cflow-provider-aws.md  cflow-sync.md  cflow-tasks-backfill.md  memory-add.md  memory-search.md
config/: feature_flags.json
deploy/: cerebral-cluster.yaml  deploy-to-cerebral.sh
docs/: BMAD_API_REFERENCE.md  BMAD_ARCHITECTURAL_DESIGN_COMPLETE.md  BMAD_BASIC_WORKFLOW_IMPLEMENTATIONS.md  BMAD_CEREBRAL_INTEGRATION_COMPLETE.md  BMAD_CHAT_HISTORY_ANALYSIS.md  BMAD_CLOUD_MIGRATION_ARCHITECTURE.md  BMAD_CLOUD_MIGRATION_PRD.md  BMAD_CLOUD_MINIO_CONFIGURATION.md  BMAD_CONFIGURATION_GUIDE.md  BMAD_ENHANCED_CAPABILITIES_USER_GUIDE.md  BMAD_ENHANCED_DEPLOYMENT_GUIDE.md  BMAD_ENHANCED_IMPLEMENTATION_COMPLETE.md  BMAD_ENHANCED_MONITORING_GUIDE.md  BMAD_GAP_ANALYSIS_REPORT.md  BMAD_GAP_ANALYSIS_SUMMARY.md  BMAD_GIT_WORKFLOW_IMPLEMENTATION.md  BMAD_IMPLEMENTATION_GAP_ANALYSIS.md  BMAD_IMPLEMENTATION_REALITY_CHECK.md  BMAD_INSTALLATION_GUIDE.md  BMAD_INTEGRATION_GUIDE.md  BMAD_MASTER_ORCHESTRATION_SYSTEM.md  BMAD_PHASE_2_TECHNICAL_REFERENCE.md  BMAD_PHASE_2_USER_GUIDE.md  BMAD_PRODUCTION_GATE_SYSTEM.md  BMAD_ROLLBACK_PLAN.md  BMAD_S3_VALIDATION_REPORT.md  BMAD_SETUP_GUIDE.md  BMAD_SUPABASE_TASK_INTEGRATION_COMPLETE.md  BMAD_TECHNICAL_GAP_ANALYSIS.md  BMAD_TECHNICAL_GAP_ANALYSIS_DETAILED.md  BMAD_TROUBLESHOOTING_GUIDE.md  BMAD_USER_TRAINING_GUIDE.md  BMAD_YAML_TEMPLATE_CLEANUP_STATUS.md  CEREBRAL_GITHUB_ACTIONS_TEST.md  GRAFANA_DASHBOARD_TROUBLESHOOTING.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  ONE_TOUCH_INSTALLER_CLUSTER_DEPLOYMENT.md  PHASE_1_COMPLETION_REPORT.md  ProjectBuildGuide.md  (+15 more)
git-hooks/: enhanced-post-commit  enhanced-pre-commit
imports/baer/: pyproject.toml
imports/baer/.github/workflows/: publish.yml
imports/baer/cflow_platform/: public_api.py
imports/baer/cflow_platform/cli/: __init__.py  cflow_agent.py  cflow_loop.py
imports/baer/cflow_platform/core/: direct_client.py
imports/baer/cflow_platform/handlers/: testing_handlers.py
imports/baer/cflow_platform/tests/: test_contracts.py
scripts/: deploy-all-services.sh  deploy-bmad-api.sh  deploy-webmcp-production.sh  deploy-webmcp.sh  generate-all-services.sh  generate-pod-simple.py  generate-pod.py  import-grafana-dashboards.sh  manual-grafana-deploy.sh  migrate_bmad_schema.py  setup-bmad-cli.py  setup-bmad-enhanced-monitoring.sh  setup-bmad-monitoring.sh  setup-grafana-dashboards.sh  setup_vault_access.sh  test_one_touch_installer.py  test_webmcp_installer_no_deps.py  (+4 more)
(+580 files in other folders)
