[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cflow-platform"
version = "0.1.6"
description = "CFlow Platform core (MCP server, handlers, tool registry, SDK)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [ { name = "Baer AutoTech" } ]
dependencies = [
  "httpx>=0.27",
  "fastapi>=0.110",
]

[project.scripts]
cflow-agent = "cflow_platform.cli.cflow_agent_boot:main"
cflow-loop = "cflow_platform.cli.cflow_loop:main"


[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/baerautotech/cflow-platform"

[tool.hatch.build]
packages = ["cflow_platform"]
include = ["cflow_platform/**"]

[tool.hatch.build.targets.wheel]
packages = ["cflow_platform"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]


